feat: initial contract state

--- a/packages/foundry/foundry.toml
+++ b/packages/foundry/foundry.toml
@@ -2,7 +2,10 @@
 src = 'contracts'
 out = 'out'
 libs = ['lib', 'node_modules']
-fs_permissions = [{ access = "read-write", path = "./"}]
+fs_permissions = [{ access = "read-write", path = "./" }]
+via_ir = true
+optimizer = true
+optimizer_runs = 200
 
 
 [rpc_endpoints]
@@ -35,15 +38,12 @@ polygonMumbai = { key = "${ETHERSCAN_API_KEY}" }
 sepolia = { key = "${ETHERSCAN_API_KEY}" }
 
 
-
 [fmt]
 line_length = 120
 tab_width = 4
 quote_style = "double"
 bracket_spacing = true
 int_types = "long"
-
-
 
 
 # See more config options https://book.getfoundry.sh/reference/config/overview
