--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "packages/foundry/lib/aave-v3-core"]
 	path = packages/foundry/lib/aave-v3-core
 	url = https://github.com/aave/aave-v3-core
+[submodule "packages/foundry/lib/protocol"]
+	path = packages/foundry/lib/protocol
+	url = https://github.com/UMAprotocol/protocol
