--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,5 @@
 [submodule "packages/foundry/lib/protocol"]
 	path = packages/foundry/lib/protocol
 	url = https://github.com/UMAprotocol/protocol
+[submodule "lib/protocol"]
+	branch = master
