--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,12 +16,24 @@
     "vercel:yolo": "vercel --build-env YARN_ENABLE_IMMUTABLE_INSTALLS=false --build-env ENABLE_EXPERIMENTAL_COREPACK=1 --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true --build-env VERCEL_TELEMETRY_DISABLED=1"
   },
   "dependencies": {
+    "@bigmi/client": "^0.7.0",
+    "@bigmi/react": "^0.7.0",
     "@heroicons/react": "~2.1.5",
+    "@lifi/sdk": "^3.15.5",
+    "@lifi/wallet-management": "^3.22.5",
+    "@lifi/widget": "^3.40.6",
+    "@mysten/dapp-kit": "^1.0.1",
+    "@mysten/sui": "^2.2.0",
     "@rainbow-me/rainbowkit": "2.2.8",
     "@scaffold-ui/components": "^0.1.3",
     "@scaffold-ui/debug-contracts": "^0.1.2",
     "@scaffold-ui/hooks": "^0.1.2",
+    "@scure/btc-signer": "^2.0.1",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/web3.js": "^1.98.4",
     "@tanstack/react-query": "~5.59.15",
+    "@wagmi/core": "latest",
     "blo": "~1.2.0",
     "burner-connector": "0.0.18",
     "daisyui": "5.0.9",
@@ -34,8 +46,8 @@
     "react-dom": "~19.0.0",
     "react-hot-toast": "~2.4.0",
     "usehooks-ts": "~3.1.0",
-    "viem": "2.34.0",
-    "wagmi": "2.16.4",
+    "viem": "latest",
+    "wagmi": "latest",
     "zustand": "~5.0.0"
   },
   "devDependencies": {
